// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreetMetaWidthLabel renders when editable 1`] = `
<DocumentFragment>
  <span
    class="street-width street-width-editable"
  >
    3 m width
    <svg
      class="menu-carat-down"
    />
  </span>
</DocumentFragment>
`;

exports[`StreetMetaWidthLabel renders when not editable 1`] = `
<DocumentFragment>
  <span
    class="street-width"
  >
    3 m width
  </span>
</DocumentFragment>
`;

exports[`StreetMetaWidthLabel renders with over available width 1`] = `
<DocumentFragment>
  <span
    class="street-width street-width-editable"
  >
    3 m width
    <span
      class="street-width-over"
    >
      (0.3 m over)
    </span>
    <svg
      class="menu-carat-down"
    />
  </span>
</DocumentFragment>
`;

exports[`StreetMetaWidthLabel renders with remaining width 1`] = `
<DocumentFragment>
  <span
    class="street-width street-width-editable"
  >
    3 m width
    <span
      class="street-width-under"
    >
      (0.3 m room)
    </span>
    <svg
      class="menu-carat-down"
    />
  </span>
</DocumentFragment>
`;
